🐛 Fixed layout issue on mobile
- The gap between each of the grid columns was forcing the grid to be a specific width on mobile and creating a horizontal scrollbar.

--- a/adventofjs/src/app.css
+++ b/adventofjs/src/app.css
@@ -148,6 +148,6 @@
 
 @layer utilities {
   .layout-grid {
-    @apply grid grid-cols-12 gap-x-20
+    @apply grid grid-cols-12 md:gap-x-20 px-5 md:px-0
   }
 }
